hphp/hack/test/typecheck/docs_url_bad_type.php.exp
File "docs_url_bad_type.php", line 3, characters 3-8:
`__Docs` URLs must be a string literal (Parsing[1002])
