hphp/hack/test/typecheck/docs_url_bad_type.php
<?hh

<<__Docs(1234)>>
class Foo {}
